--- a/package.json
+++ b/package.json
@@ -19,12 +19,16 @@
     "url": "https://github.com/bitfriend/trace-labs-bank-contract/issues"
   },
   "homepage": "https://github.com/bitfriend/trace-labs-bank-contract#readme",
+  "dependencies": {
+    "@openzeppelin/contracts": "^4.3.2"
+  },
   "devDependencies": {
     "@nomiclabs/hardhat-ethers": "^2.0.2",
     "@nomiclabs/hardhat-waffle": "^2.0.1",
     "chai": "^4.3.4",
     "ethereum-waffle": "^3.4.0",
     "ethers": "^5.4.7",
-    "hardhat": "^2.6.4"
+    "hardhat": "^2.6.4",
+    "solidity-coverage": "^0.7.17"
   }
 }
